2009-02-09  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed "Bug 473686 - Constants are
	  not included in code completion".

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* CSharpBinding.csproj: Don't local-copy other addins' dlls.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Rename a couple of
	  variables, as csc is more picky about multiple locals with
	  the same name in switches.

	* gtk-gui/gui.stetic: Updated.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* CSharpBinding.csproj: Don't treat warning as errors, because
	  csc still outputs warnings for this project.

2009-02-06  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 472092 -
	  'yield return new' includes incaccessible members'.

2009-02-06  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: Fixing C#3 query expressions.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBinding.mds:
	* CSharpBinding.mdp:
	* CSharpBinding.csproj: Migrated to MSBuild file format.

2009-02-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/MemberCompletionData.cs: Avoid an InvalidCastException
	  in the case where an overloads's member is not the same type
	  as the main member. Not sure why this would happen, but it
	  just did.

2009-02-05  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* Gui/MemberCompletionData.cs: 

	* Gui/NewCSharpExpressionFinder.cs: fixed 'Bug 471937 - Code
	  completion of 'new' showing invorrect entries'.

2009-02-05  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: fixed "Bug 472714 -
	  MonoDevelop automatic indentation does not follow "Convert
	  tabs to spaces" option".

2009-02-04  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/MemberCompletionData.cs: Better sorting of overloads.

2009-02-04  Michael Hutchinson  <mhutchinson@novell.com>
